--- a/templates/config.conf.j2
+++ b/templates/config.conf.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
 [Interface]
-Address = {{ wg_tunnel_prefix_ipv4 | ipaddr('1') }},{{ wg_tunnel_prefix_ipv6 | ipaddr('1') }}
+Address = {{ wg_tunnel_prefix_ipv4 | ansible.utils.ipaddr('1') }},{{ wg_tunnel_prefix_ipv6 | ansible.utils.ipaddr('1') }}
 ListenPort = {{ wg_port }}
 PrivateKey = {{ wg_private_key }}
 # public key = {{ wg_public_key }}
@@ -16,5 +16,5 @@ PostDown = {{ wg_postdown }}
 [Peer]
 PublicKey = {{ client.public_key }}
 PresharedKey = {{ client.preshared_key }}
-AllowedIPs = {{ wg_tunnel_prefix_ipv4 | ipaddr(loop.index+1) | ipaddr('address') }}/32,{{ wg_tunnel_prefix_ipv6 | ipaddr(loop.index+1)|ipaddr('address') }}/128
+AllowedIPs = {{ wg_tunnel_prefix_ipv4 | ansible.utils.ipaddr(loop.index+1) | ansible.utils.ipaddr('address') }}/32,{{ wg_tunnel_prefix_ipv6 | ansible.utils.ipaddr(loop.index+1)|ansible.utils.ipaddr('address') }}/128
 {% endfor %}
