--- a/templates/config.conf.j2
+++ b/templates/config.conf.j2
@@ -1,11 +1,11 @@
-{% if stealth_mode %}
+{% if not stealth_mode %}
 # {{ ansible_managed }}
 {% endif %}
 [Interface]
 Address = {{ wg_tunnel_prefix_ipv4 | ansible.utils.ipaddr('1') }},{{ wg_tunnel_prefix_ipv6 | ansible.utils.ipaddr('1') }}
 ListenPort = {{ wg_port }}
 PrivateKey = {{ wg_private_key }}
-{% if stealth_mode %}
+{% if not stealth_mode %}
 # public key = {{ wg_public_key }}
 {% endif %}
 {% if wg_postup is defined %}
@@ -15,7 +15,7 @@ PostUp = {{ wg_postup }}
 PostDown = {{ wg_postdown }}
 {% endif %}
 {% for client in wg_clients %}
-{% if stealth_mode %}
+{% if not stealth_mode %}
 # {{ client.name }}
 {% endif %}
 [Peer]
