--- a/templates/client.j2
+++ b/templates/client.j2
@@ -8,3 +8,6 @@ PresharedKey = {{ item[0].preshared_key }}
 # Hardcode the IPv4 address so we are not dependent on possibly flakey/rogue local resolvers
 Endpoint = {{ wg_hostname }}:{{ wg_port }}
 AllowedIPs = {{ item[1].allowedips | join(',') }}
+{% if peer_persistentkeepalive|int > 0 %}
+PersistentKeepalive = {{ peer_persistentkeepalive }}
+{% endif %}
